--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<center>
 <body bgcolor="blue">
-    <a href="./task/LINGESWARAN/LINGESWARAN.HTML"><button>to know about me</button></a>
-    <a href="./task/IMAGE FOLDER.HTML/"><button>click to view my image</button></a>
-    <a href="./task/list/index.html"><button>click to view my lisk</button></a>
-    <a href="./task/resume/index.html"><button>click to view resume</button></a>
+    <a href="./task/LINGESWARAN/LINGESWARAN.HTML"><button>to know about me</button></a><br>
+    <a href="./task/IMAGE FOLDER.HTML/image.html"><button>click to view my image</button></a><br>
+    <a href="./task/list/index.html"><button>click to view my lisk</button></a><br>
+    <a href="./task/resume/index.html"><button>click to view resume</button></a><br>
 </body>
-</html>
+</center>
