--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     <a href="./task/list/index.html"><button>click to view my lisk</button></a><br>
     <a href="./task/resume/index.html"><button>click to view resume</button></a><br>
 </body>
-</center>
+</center>
+</html>
