--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <center>
 <body bgcolor="blue">
     <a href="./task/LINGESWARAN/LINGESWARAN.HTML"><button>to know about me</button></a><br>
-    <a href="./task/IMAGE FOLDER.HTML/image.html"><button>click to view my image</button></a><br>
+    <a href="./task/imagefolder/image.html"><button>click to view my image</button></a><br>
     <a href="./task/list/index.html"><button>click to view my lisk</button></a><br>
     <a href="./task/resume/index.html"><button>click to view resume</button></a><br>
 </body>
