--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="./task/imagefolder/image.html"><button>click to view my image</button></a><br>
     <a href="./task/list/index.html"><button>click to view my lisk</button></a><br>
     <a href="./task/resume/index.html"><button>click to view resume</button></a><br>
+    <A href="./task/onlineshop/shop.html"> <button>click to Go mu online shop</button></A>
 </body>
 </center>
 </html>
