--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="./task/resume/index.html"><button>click to view resume</button></a><br>
     <A href="./task/onlineshop/shop.html"> <button>click here Go to my online shop</button></A><br>
     <a href="./task/time table/table.html"> <button>click to view my time table</button></a><br>
+    <a href="./task/div and list/div.html"><button>click to view my div lidt</button></a>
 </body>
 </center>
 </html>
