--- a/task/flag/flag.html
+++ b/task/flag/flag.html
@@ -16,7 +16,7 @@
     <body>
     <h2>Flag</h2>
     <div style="border:2px solid black;width:180px;height:180px;">
-        <div style="background-color:orange;height:60px"></div>
+        <div style="background-color:orange;height:60px;"></div>
         <div style="background-color:white;height:60px"></div>
         <div style="background-color:green;height:60px"></div>
     </div>
@@ -65,6 +65,17 @@
     📍 <strong>Location:</strong> Blossom Garden Hall, Madurai
   </div>
 </div>
+</div>
+    <hr>
+    <h1>QUOTE</h1>
+    <div class="uote">
+        
+        <pre style="padding-left: 10%;"><h2>"Success is not final.failure is not fatal: it is 
+the courage to continue that counts</h2></pre>
+        <div class="u1">
+
+        </div>
+    </div>
 </center>
 
 </body>
