--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="./task/time table/table.html"> <button>click to view my time table</button></a><br>
     <a href="./task/div and list/div.html"><button>click to view my div lidt</button></a><br>
     <a href="./task/flag/flag.html"> <button>click to view my flag</button></a>
+    <a href="./task/menu/menu.html"> click to view my hotel menu</a>
 </body>
 </center>
 </html>
