--- a/task/menu/menu.html
+++ b/task/menu/menu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-    <div style="background-color: rgb(183, 245, 245); border: 3px solid   rgb(42, 158, 175);e ;width: 800px; height: 1700px;">
+    <div style="background-color: rgb(183, 245, 245); border: 3px solid   rgb(42, 158, 175); ;width: 800px; height: 2330px;">
     <div style="background-color: rgb(183, 245, 245); border: 3px solid  rgb(183, 245, 245); ;width: 795px; height: 120px; color: black;">
         <h1> DELICIOUS FOOD COURT </h1>
         <b><h3> WELCOME TO FOOD WORLD ALL TYPE OF FOOD ITEMS ARE HERE </h3></b>
@@ -18,11 +18,21 @@
         <b><p style="color: black;">Lorem ipsum dolor Unde magni illum voluptatem quam saepe nesciunt pariatur eligendi amet, alias id ut velit optio totam perspiciatis facilis animi fugiat suscipit consequatur.</p></b>
     </div><br>
     <h3 style="color: blue;">
-        THE HOTELS DISES ARE VERY SWEET AND SOFT SO MANY ITEMS ARE AVAILABLE AND DELIVERD BY THIS HOTEL
+        HOT MENU
     </h3>
     <br>
-    <div style="background-color:rgb(183, 245, 245); border: 3px solid  rgb(42, 158, 175); width: 700px; height: 450px;">
-        <table border="1" style="border-collapse:collapse" width="700px" height="450px">
+    <div style="background-color: rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175); width: 300px; height: 400px;"> 
+        <img src="menu card.jpg" width="300px" height="400px">
+    </div><br>
+    <h3 style="color: blue;">
+        TODAY SPECIAL 
+    </h3>
+    <div style="background-color: rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175); width: 300px; height: 400px;"> 
+        <img src="menu card2.jpg" width="300px" height="400px">
+    </div><br>
+    <h3 style="color: blue;"> SPECIAL DISS MENU</H3>
+    <div style="background-color:rgb(183, 245, 245); border: 3px solid  rgb(42, 158, 175); width: 500px; height: 250px;">
+        <table border="1" style="border-collapse:collapse" width="500px" height="250px">
         <tr align="center">
         <b><td style="color: red;"> Dish</td></b>
         <b><td style="color: red;"> Discription</td></b>
@@ -46,29 +56,30 @@
     </table>
     </div>
     <BR>
-    <h2> LOCATION : AMMAPALAYAM BHARATHINAGAR , TIRUPUR</h2>
-    <H2> MOBILE : 8248794379</H2>
-    <H2> MAIL ID : SLINGESWARAN@GAMIL.COM</H2>
-    <H2> </H2>
-    <BR>
+        <I><H2> "IF YOU WANT LIKE TO ERDER PLEASE CONTACT ME" </H2>   </I>
+        <BR>
         <div style="background-color:rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175);width: 500px; height: 300px;">
-    <h1> Registration form</h1>
+            <BR>
+    <h1> GET IN TOUCH</h1>
     <form>
         <table>
         <tr>
-        <b><td><lable>Custamername : </td><td><input type="text"></lable></td></b>
+        <b><td><lable>NAME : </td><td><input type="text"></lable></td></b>
         </tr>
         <tr>
-        <b><td><label>mobile no : </td><td><input type="text"></label></td></b>
+        <b><td><label>MOBILE NO : </td><td><input type="text"></label></td></b>
         </tr>
         <tr>
-        <b><td><label> item : </label></td><br></b>
+        <b><td><label> MESSAGE : </label></td><br></b>
         <td><textarea rows="3px" cols="20px"> </textarea><br></td>
         </tr>
-        
         </table>
-        <button style="margin-left: 80px;">submit your response</button>
+        <button style="margin-left: 80px; color: blue;">submit your response</button>
     </form>
+     </div>
+     <br>
+    <div style="background-color: blue; border: 3px solid   blue; ;width: 350px; height: 50px; color: antiquewhite; border-radius: 30px;">
+       <i><h4> 2025 best Restarunt|www.deliciousfood.com</h4></i> 
     </center>
     </div>
     <br>
