--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>Document</title>
 </head>
 <center>
-<body bgcolor="blue">
-    <a href="./task/LINGESWARAN/LINGESWARAN.HTML"><button>to know about me</button></a><br>
-    <a href="./task/imagefolder/image.html"><button>click to view my image</button></a><br>
-    <a href="./task/list/index.html"><button>click to view my lisk</button></a><br>
-    <a href="./task/resume/index.html"><button>click to view resume</button></a><br>
-    <A href="./task/onlineshop/shop.html"> <button>click here Go to my online shop</button></A><br>
-    <a href="./task/time table/table.html"> <button>click to view my time table</button></a><br>
-    <a href="./task/div and list/div.html"><button>click to view my div lidt</button></a><br>
-    <a href="./task/flag/flag.html"> <button>click to view my flag</button></a>
-    <a href="./task/menu/menu.html"> click to view my hotel menu</a>
+<body bgcolor="pink">
+    <h1> WELCOME TO MY WEBPAGE</h1>
+    </center>
+    <a href="./task/LINGESWARAN/LINGESWARAN.HTML"><button style="height: 50px; width: 200px; border-radius: 30px;background: transparent;">to know about me</button></a>
+    <a href="./task/imagefolder/image.html"><button style="height: 50px; width: 200px; border-radius: 30px;background: transparent;">click to view my image</button></a>
+    <a href="./task/list/index.html"><button style="height: 50px; width: 200px; border-radius: 30px;background: transparent;">click to view my lisk</button></a>
+    <a href="./task/resume/index.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent;">click to view resume</button></a>
+    <a href="./task/onlineshop/shop.html"> <button style="height: 50px; width: 200px; border-radius: 30px;background: transparent; margin-bottom: 10px;">click Go to my online shop</button></A>
+    <a href="./task/time table/table.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent;">click to view my time table</button></a>
+    <a href="./task/div and list/div.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent;">click to view my div liSt</button></a><BR>
+    <a href="./task/flag/flag.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px;">click to view my flag</button></a>
+    <a href="./task/menu/menu.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px;">click to view my hotel menu</button>
 </body>
-</center>
 </html>
