--- a/task/menu/menu.html
+++ b/task/menu/menu.html
@@ -30,7 +30,7 @@
     <div style="background-color: rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175); width: 300px; height: 400px;"> 
         <img src="menu card2.jpg" width="300px" height="400px">
     </div><br>
-    <h3 style="color: blue;"> SPECIAL DISS MENU</H3>
+    <h3 style="color: blue;"> SPECIAL DISH MENU</H3>
     <div style="background-color:rgb(183, 245, 245); border: 3px solid  rgb(42, 158, 175); width: 500px; height: 250px;">
         <table border="1" style="border-collapse:collapse" width="500px" height="250px">
         <tr align="center">
@@ -56,7 +56,7 @@
     </table>
     </div>
     <BR>
-        <I><H2> "IF YOU WANT LIKE TO ERDER PLEASE CONTACT ME" </H2>   </I>
+        <I><H2> "IF YOU WANT LIKE TO ORDER PLEASE CONTACT ME" </H2>   </I>
         <BR>
         <div style="background-color:rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175);width: 500px; height: 300px;">
             <BR>
