--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="./task/div and list/div.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent;">click to view my div liSt</button></a><BR>
     <a href="./task/flag/flag.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px;">click to view my flag</button></a>
     <a href="./task/menu/menu.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px;">click to view my hotel menu</button>
-</body>
+    <a href="./task/webpage/web.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view my webpage</button>
+    </body>
 </html>
