--- a/task/menu/menu.html
+++ b/task/menu/menu.html
@@ -12,7 +12,7 @@
         <h1> DELICIOUS FOOD COURT </h1>
         <b><h3> WELCOME TO FOOD WORLD ALL TYPE OF FOOD ITEMS ARE HERE </h3></b>
     </div> <br>
-    <div style="background-color: rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175); width: 600px; height: 350px;"> 
+    <div style="background-color: rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175); width: 600px; height: 350px; border-radius: 30px;"> 
         <h1 style="color: black;"> About Us</h1>
         <img src="hotel.jpg" width="300px" height="150px">
         <b><p style="color: black;">Lorem ipsum dolor Unde magni illum voluptatem quam saepe nesciunt pariatur eligendi amet, alias id ut velit optio totam perspiciatis facilis animi fugiat suscipit consequatur.</p></b>
@@ -58,7 +58,7 @@
     <BR>
         <I><H2> "IF YOU WANT LIKE TO ORDER PLEASE CONTACT ME" </H2>   </I>
         <BR>
-        <div style="background-color:rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175);width: 500px; height: 300px;">
+        <div style="background-color:rgb(183, 245, 245); border: 3px solid rgb(42, 158, 175);width: 500px; height: 300px; border-radius: 40px;">
             <BR>
     <h1> GET IN TOUCH</h1>
     <form>
@@ -78,7 +78,7 @@
     </form>
      </div>
      <br>
-    <div style="background-color: blue; border: 3px solid   blue; ;width: 350px; height: 50px; color: antiquewhite; border-radius: 30px;">
+    <div style="background-color: blue; border: 3px solid   blue; ;width: 350px; height: 50px; color: antiquewhite; border-radius: 30px; border-radius: 40px;">
        <i><h4> 2025 best Restarunt|www.deliciousfood.com</h4></i> 
     </center>
     </div>
