--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <a href="./task/flag/flag.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px;">click to view my flag</button></a>
     <a href="./task/menu/menu.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px;">click to view my hotel menu</button>
     <a href="./task/webpage/web.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view my webpage</button>
+    <a href="./task/css/new.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view task</button>
+    <a href="./task/css/registration.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;"> registration form</button></a>
+    <a href="./project/project.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view project</button></a>
     </body>
 </html>
