--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <a href="./task/css/new.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view task</button>
     <a href="./task/css/registration.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;"> registration form</button></a>
     <a href="./project/project.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view project</button></a>
+    <a href="./task/logo creation/logo.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view logo</button></a>
     </body>
 </html>
