--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
     <a href="./task/css/registration.html"><button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;"> registration form</button></a>
     <a href="./project/project.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view project</button></a>
     <a href="./task/logo creation/logo.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">click to view logo</button></a>
-    </body>
+   <a href="./task/css grid/grid.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid CSS</button></a>
+   <a href="./task/daily rou/daily rou.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Daily routine</button></a>
+   <a href="./task/galery/drid colour container.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">colour container</button></a>
+   <a href="./task/grid layout2/grid layout2.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid layout 2</button></a>
+   <a href="./task/grid layout3/grid layout3.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid layout 3</button></a>
+   <a href="./task/grid layout4/grid layout4.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid layout 4</button></a>
+   <a href="./task/grid/grid css.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid CSS and HTML</button></a>
+</body>
 </html>
