--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
    <a href="./task/grid layout3/grid layout3.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid layout 3</button></a>
    <a href="./task/grid layout4/grid layout4.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid layout 4</button></a>
    <a href="./task/grid/grid css.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Grid CSS and HTML</button></a>
+   <a href="./task/position task 1/position1.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 1</button></a>
+  <a href="./task/position task2/position2.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 2</button></a>
+ <a href="./task/position task 3/position3.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 3</button></a>
+  <a href="./task/position task 4/position4.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 4</button></a>
+   <a href="./task/position task 5/position5.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 5</button></a>
+    <a href="./task/position task6/position6.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 6</button></a>
+     <a href="./task/position task 7/position7.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 7</button></a>
 </body>
 </html>
