--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
    <a href="./task/position task 5/position5.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 5</button></a>
     <a href="./task/position task6/position6.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 6</button></a>
      <a href="./task/position task 7/position7.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">position 7</button></a>
-</body>
+     <a href="./task/toggle button/toggle.html"> <button style="height: 50px; width: 200px; border-radius: 30px; background: transparent; margin-top: 10px; ;">Toggle Button</button></a>
+    </body>
 </html>
